# lead-gen-scraper

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  config.py  database.py  database_sync.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/anti_detection/: __init__.py  headers.py  proxy_rotator.py  stealth_config.py  user_agent_rotator.py
backend/api/: deps.py  pubsub.py  ws.py
backend/cache/: __init__.py  html_cache.py
backend/cli/: __init__.py  __main__.py  scrape.py  test_source.py  validate.py
backend/db_models/: __init__.py  company.py  export_log.py  pipeline_stat.py  scrape_task.py
backend/demo/: __init__.py  demo_seeder.py  dirty_data_generator.py
backend/models/: __init__.py  raw_data.py
backend/pipeline/: __init__.py  base.py  deduplicator.py  enricher.py  field_validator.py  html_cleaner.py  stats.py
backend/schemas/: company.py  export.py  pipeline.py  task.py
backend/scrapers/: base.py  config_loader.py  dynamic_scraper.py  source_router.py  static_scraper.py
backend/sources/: bbb.yaml  clutch.yaml  crunchbase.yaml  google_maps.yaml  yellowpages.yaml  yelp.yaml
backend/tasks/: celery_app.py  processing.py  scrape_task.py
backend/tests/: conftest.py  test_alembic_setup.py  test_api_routes.py  test_app.py  test_auto_seed.py  test_cli.py  test_config_loader.py  test_database_sync.py  test_db_models.py  test_deduplicator.py  test_demo_seeder.py  test_dirty_data.py  test_dynamic_scraper.py  test_enricher.py  test_field_validator.py  test_html_cache.py  test_html_cleaner.py  test_pipeline_runner.py  test_pipeline_stats.py  test_processing.py  test_proxy_rotator.py  test_pubsub.py  test_raw_data.py  test_source_router.py  (+5 more)
(+54 files in other folders)
